--- a/src/App.css
+++ b/src/App.css
@@ -44,10 +44,30 @@ html, body {
   }
 }
 
-/* @import "tailwindcss"; */
-
 .heebo-text {
   font-family: 'Heebo', sans-serif;
+}
+
+@keyframes dropBounce {
+  0% {
+    transform: translateY(-300%);
+  }
+  60% {
+    transform: translateY(30px);
+  }
+  80% {
+    transform: translateY(-5px);
+  }
+  93% {
+    transform: translateY(2px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+.header-animation {
+  animation: dropBounce 0.6s forwards;
 }
 
 @layer base {
